Fixed navbar margin on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,12 @@
     background-color: transparent;
 }
 
+@media (max-width: 576px) {
+    .nav-bar div {
+        margin-right: 30px;
+    }
+}
+
 /********************HOME********************/
 
 .sitename-container img{
